packages/web/src/scss/components/Accordion/_Accordion.scss
@use 'sass:map';
@use 'theme';
@use '../../tools/typography';
@use '../../tools/reset';

.Accordion__itemHeader {
    position: relative;
    display: flex;
    gap: theme.$accordion-header-gap;
    align-items: flex-start;
    justify-content: space-between;
    width: 100%;
    padding: theme.$accordion-header-padding-y theme.$accordion-header-padding-x;
    margin-bottom: 0;
    border-radius: theme.$accordion-border-radius;
    background-color: theme.$accordion-item-background-color-default;

    &::before {
        content: '';
        position: absolute;
        top: 0;
        right: theme.$accordion-header-padding-x;
        left: theme.$accordion-header-padding-x;
        border-bottom: theme.$accordion-divider-width theme.$accordion-divider-style theme.$accordion-divider-color;
    }

    @media (hover: hover) {
        &:hover {
            background-color: theme.$accordion-item-background-color-hover;
        }

        &:hover::before {
            border-bottom-color: transparent;
        }
    }
}

.Accordion__itemIcon {
    pointer-events: none;
}

.Accordion__itemToggle {
    @include reset.button();
    @include typography.generate(theme.$accordion-header-typography);

    flex: initial;
    text-align: left;
    color: theme.$accordion-header-typography-color;
    -webkit-tap-highlight-color: transparent;

    &:first-of-type::before {
        content: '';
        position: absolute;
        z-index: 0;
        inset: 0;
        border-radius: theme.$accordion-border-radius;
    }

    &[aria-expanded='true'] {
        @include typography.generate(theme.$accordion-header-typography-active);
    }

    // stylelint-disable-next-line selector-max-class -- We have to control the state of the Icon
    &[aria-expanded='true'] + .Accordion__itemSide .Accordion__itemIcon {
        transform: rotate(180deg);
    }

    &:active:first-of-type::before {
        background-color: theme.$accordion-item-background-color-active;
    }
}

.Accordion__itemSide,
.Accordion__itemSlot {
    display: flex;
    gap: theme.$accordion-header-gap;
    align-items: center;
    justify-content: space-between;
}

.Accordion__itemSlot :is(a, button) {
    position: relative;
}

.Accordion__content {
    position: relative;
    padding-bottom: theme.$accordion-content-bottom-offset;

    &::after {
        content: '';
        position: absolute;
        top: 100%;
        right: theme.$accordion-header-padding-x;
        left: theme.$accordion-header-padding-x;
        border-bottom: theme.$accordion-divider-width theme.$accordion-divider-style theme.$accordion-divider-color;
    }
}

// stylelint-disable-next-line selector-max-class, selector-max-specificity -- We want to hide the border above the header of the adjacent item
.Accordion__item:not(:last-child) .is-open .Accordion__content::after {
    border-bottom-color: transparent;
}

